# Databricks

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: README.md  build_deply_module_wheels.yml  deploy_dab_bundles.yml  deploy_dcw_bundle.yml  pylint.yml
Databricks/: README.md
Databricks/bundles/: README.md
Databricks/bundles/daily_capitals_weather/: README.md
Databricks/bundles/wc_bundle/: README.md  databricks.yml  pyproject.toml
Databricks/bundles/wc_bundle/src/wc_bundle_etl/: README.md
Databricks/bundles/wc_bundle/src/wc_bundle_etl/transformations/: gold_wc_teams.py
Databricks/i2_playground/: pyproject.toml
Databricks/notebooks/: pytest.ini
Databricks/notebooks/modules/cdc_bronze_ingest/: README.md  pyproject.toml
Databricks/notebooks/modules/cdc_bronze_ingest/src/cdc_bronze_ingest/: __init__.py  config.py  discovery.py  ingest.py  streaming.py
Databricks/notebooks/modules/cdc_bronze_ingest/tests/: test_config.py  test_discovery.py
Databricks/notebooks/modules/domain_batch_ingest/: pyproject.toml
Databricks/notebooks/modules/domain_batch_ingest/src/: generic_autoloader.py  generic_extractor.py
Databricks/notebooks/modules/domain_batch_ingest/src/domain_batch_ingest/: generic_autoloader.py  generic_extractor.py
Databricks/terraform/: README.md  automated_UC_creation.tf  jobs.tf  main.tf  modules.tf  notebooks.tf  secrets.tf  variables.tf
Dockerfiles/terraform_ubuntu/: dockerfile
data_quality/: README.md
data_quality/bundle/: databricks.yml
data_quality/checks/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
data_quality/ci/: deploy_data_quality.yml
declarative_bronze/: README.md
declarative_bronze/bundle/: databricks.yml
declarative_bronze/ci/: deploy_declarative_bronze.yml
declarative_bronze/ingestion/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  pipeline.tf  terraform.tfvars.example  variables.tf  versions.tf
declarative_bronze/provisioning/: README.md  iam.tf  main.tf  outputs.tf  s3.tf  seed.tf  terraform.tfvars.example
explorations/: README.md
explorations/bundles/: README.md
explorations/notebooks/: README.md
explorations/terraform/: README.md
explorations/tests/: test_aq_pipeline.py
lakeflow_connect/: README.md
lakeflow_connect/aws/: .terraform.lock.hcl  iam.tf  terraform.tfvars.example
lakeflow_connect/ingestion/: .terraform.lock.hcl  main.tf  outputs.tf
(+176 files in other folders)
